--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "my-crm-app",
-  "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^6.3.1",
     "next": "15.1.7",
     "prisma": "^6.3.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^13.1.0",
+    "@testing-library/user-event": "^13.1.9",
+    "babel-jest": "^28.1.0",
+    "jest": "^28.1.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
