--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^13.1.9",
     "babel-jest": "^28.1.0",
     "jest": "^28.1.0",
-    "jest-environment-jsdom": "^29.7.0"
+    "jest-environment-jsdom": "^29.7.0",
+    "node-mocks-http": "^1.16.2"
   }
 }
